# failfast-api

./: .coveralls.yml  .dockerignore  .gitignore  .gitlab-ci.jsonnet  .gitlab-ci.yml  .pylintrc  .python-version  .style.yapf  AUTHORS.rst  CHANGELOG  Dockerfile  LICENSE  MANIFEST.in  Makefile  OWNERS  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  run-server.sh  run-worker.sh  setup.cfg  setup.py  tox.ini
.gitlab-ci/: jobs.libsonnet  vars.libsonnet
Documentation/config/: failfast-ci.yaml
conf/: development.yaml  gunicorn.py  logging.conf  logging_debug.conf
deploy/: Dockerfile
deploy/failfast/: Kube-manifest.yaml  Makefile  Readme.md
deploy/failfast-ci/: kustomization.yaml
deploy/hub2lab-hook/: .python-version  manifest.jsonnet
ffci/: client_base.py  clients.py  config.py  flycheck_config.py  funnelboat  init.py  logutils.py  models.py  options.py  pipeline.py  utils.py  version.py
ffci/api/: hook.py  info.py  wsgi.py
ffci/client/: __init__.py  base.py  engine.py
ffci/cmd/: default_config.py  github.py  main.py  server.py  version.py
ffci/github/: client.py  models.py
ffci/gitlab/: client.py  models.py
ffci/jobs/: celeryconfig.py  job_base.py  runner.py  tasks.py
hub2labhook/: __init__.py  config.py  exception.py  githubclient.py  githubevent.py  gitlabclient.py  loghandler.py  options.py  pipeline.py  triggerbuild.py  utils.py
icons/: icon_authors.md
scripts/: generate-conf-doc.py  migrate_variables.py
tests/: conftest.py  test_api.py  test_check.py  test_config.py  test_github_client.py  test_githubevent.py
(+114 files in other folders)
